--- a/java/java.htm
+++ b/java/java.htm
@@ -103,43 +103,161 @@
     <h2 style="color:#3BA354;">常用</h2>
     <div class="model">
       <span>
-        <a href="http://www.java2s.com/"><b>java2s</b></a> (程序指南,源码例子)
+        <a href="http://www.java2s.com/"> <b>java2s</b>
+        </a>
+        (程序指南,源码例子)
       </span>
       <span>
-        <a href="http://grepcode.com/"><b>grepcode</b></a> (Searching Java code 搜索java源码)
-      </span>
-       <span>
-        <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html"><b>JDK</b></a> ( Java SE Downloads - Oracle)
-      </span>
-      <span>
-        <a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html"><b>Java SE Development Kit 7 Downloads</b></a>
+        <a href="http://grepcode.com/"> <b>grepcode</b>
+        </a>
+        (Searching Java code 搜索java源码)
       </span>
       <span>
-        <a href="http://docs.oracle.com/javase/7/docs/webnotes/install/"><b>各操作系统安装帮助指南</b></a>
+        <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">
+          <b>JDK</b>
+        </a>
+        ( Java SE Downloads - Oracle)
       </span>
       <span>
-        <a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk-7-netbeans-download-432126.html"><b> JDK 7u25 with NetBeans 7.3.1</b></a>
+        <a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html">
+          <b>Java SE Development Kit 7 Downloads</b>
+        </a>
       </span>
       <span>
-        <a href="http://www.oracle.com/technetwork/java/javase/downloads/jre7-downloads-1880261.html"><b> Java SE Runtime Environment 7 Downloads</b></a>
+        <a href="http://docs.oracle.com/javase/7/docs/webnotes/install/">
+          <b>各操作系统安装帮助指南</b>
+        </a>
       </span>
       <span>
-        <a href="http://www.huihoo.com/"><b>灰狐</b></a> (程序员网站、开发者网络、分享者乐园,一个自由、社区驱动的创新工场,一个公共资源)
+        <a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk-7-netbeans-download-432126.html">
+          <b>JDK 7u25 with NetBeans 7.3.1</b>
+        </a>
       </span>
       <span>
-        <a href="http://www.springsource.org/"><b>Spring</b></a> 
+        <a href="http://www.oracle.com/technetwork/java/javase/downloads/jre7-downloads-1880261.html">
+          <b>Java SE Runtime Environment 7 Downloads</b>
+        </a>
       </span>
-       <span>
-        <a href="http://docs.huihoo.com/spring/"><b>Spring文档</b></a> 
+      <span>
+        <a href="http://www.huihoo.com/">
+          <b>灰狐</b>
+        </a>
+        (程序员网站、开发者网络、分享者乐园,一个自由、社区驱动的创新工场,一个公共资源)
       </span>
-       <span>
-        <a href="http://download.huihoo.com/spring/"><b>Spring下载</b></a> 
+      <span>
+        <a href="http://www.springsource.org/">
+          <b>Spring</b>
+        </a>
       </span>
-       <span>
-        <a href="http://wiki.huihoo.com/wiki/Spring_Framework"><b>Spring资料介绍</b></a> 
+      <span>
+        <a href="http://docs.huihoo.com/spring/">
+          <b>Spring文档</b>
+        </a>
       </span>
+      <span>
+        <a href="http://download.huihoo.com/spring/">
+          <b>Spring下载</b>
+        </a>
+      </span>
+      <span>
+        <a href="http://wiki.huihoo.com/wiki/Spring_Framework">
+          <b>Spring资料介绍</b>
+        </a>
+      </span>
+
+      <span>
+        <a href="http://www.hibernate.org/">
+          <b>hibernate官网</b>
+        </a>
+      </span>
+      <span>
+        <a href="https://sourceforge.net/projects/hibernate/">
+          <b>hibernate下载</b>
+        </a>
+      </span>
+      <span>
+        <a href="http://docs.jboss.org/hibernate/">
+          <b>hibernate 文档</b>
+        </a>
+      </span>
+
+      <span>
+        <a href="http://ibatis.apache.org/">
+          <b>ibatis</b>
+        </a>
+      </span>
+      <span>
+        <a href="http://code.google.com/p/mybatis/">
+          <b>mybatis</b>
+        </a>
+      </span>
+      <span>
+        <a href="http://struts.apache.org/">
+          <b>struts</b>
+        </a>
+      </span>
+      <span>
+        <a href="http://commons.apache.org/proper/commons-dbutils/">
+          <b>commons-dbutils</b>
+        </a>
+      </span>
+      <span>
+        <a href="http://www.ibm.com/developerworks/cn/java/">
+          <b>IBM Java 开发</b>
+        </a>
+      </span>
+
+      <span>
+        <a href="http://www.jetbrains.com/idea/">
+          <b>IntelliJ IDEA</b>
+        </a>
+      </span>
+      <span>
+        <a href="http://www.eclipse.org/downloads/">
+          <b>eclipse</b>
+        </a>
+      </span>
+      <span>
+        <a href="http://www.myeclipseide.com">
+          <b>myeclipse</b>
+        </a>
+      </span>
+      <span>
+        <a href="http://www.sublimetext.com/">
+          <b>sublimetext</b>
+        </a>
+      </span>
+
+      <span>
+        <a href="http://www.miniui.com/demo/">
+          <b>jQuery MiniUI</b>
+        </a>
+      </span>
+
+      <span>
+        <a href="http://twitter.github.io/bootstrap/">
+          <b>Twitter Bootstrap</b>
+        </a>
+      </span>
+
+      <span>
+        <a href="http://findicons.com/">
+          <b>搜索图片</b>
+        </a>
+      </span>
+      <span>
+        <a href="http://www.open-open.com/">
+          <b>深度开源</b>
+        </a>
+      </span>
+      <span>
+        <a href="http://www.ostools.net/">
+          <b>开源中国</b>
+        </a>
+      </span>
+
     </div>
- 
+
   </div>
   <div id="footer">
     <span id="icp" class="fleft gray-link">&copy; 2005－2013 tankaixiong.cn, all rights reserved</span>
@@ -157,6 +275,289 @@
       <a href="#">广告</a>
     </span>
   </div>
+</div>
+
+</body>
+</html>
+<!DOCTYPE html>
+<!-- saved from url=(0037)http://book.douban.com/tag/?view=type -->
+<html lang="zh-CN" class="ua-windows ua-webkit book-new-nav">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>JAVA 程序猿的专属导航</title>
+<meta http-equiv="Pragma" content="no-cache" />
+<meta name="keywords" content="java导航,java常用网址" />
+<meta name="description" content="专属JAVA程序员的导航网站,收集了常用实用的JAVA技术网址。" />
+<link href="mini.css" rel="stylesheet" type="text/css" />
+<link rel="shortcut icon" type="image/ico" href="java.ico">
+<style type="text/css"></style>
+<style>
+.tagCol{width:100%}
+.tagCol td{width:20%;font-size:14px}
+.tagCol td b{
+  font-weight:normal;
+  color:#aaa;
+}
+.indent { line-height: 2.5 }
+.tag-view-type {
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 5px;
+  margin-bottom: 10px;
+}
+</style>
+</head>
+<body ryt14953="1">
+<div id="db-global-nav" class="global-nav">
+  <div class="bd">
+    <div class="top-nav-info">
+      <a href="http://www.cnblogs.com/tankaixiong">给我留言</a>
+    </div>
+    <div class="global-nav-items">
+      <ul>
+        <li>
+          <a href="/">首页</a>
+        </li>
+        <li class="on">
+          <a href="#">JAVA导航</a>
+        </li>
+        <li>
+          <a href="#">.NET导航</a>
+        </li>
+        <li>
+          <a href="http://www.cnblogs.com/tankaixiong/" target="_blank">博客</a>
+        </li>
+        <li>
+          <a href="/about.htm"  target="_blank" >
+            <span>关于我</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+<div id="db-nav-book" class="nav">
+  <div class="nav-wrap">
+    <div class="nav-primary">
+      <div class="nav-logo">
+        <a href="#">JAVA导航</a>
+      </div>
+      <div class="nav-search">
+        <form action="http://www.baidu.com/s" target="_blank" method="get">
+          <fieldset>
+            <legend>搜索：</legend>
+            <!--<label for="inp-query">搜索你要的内容</label>
+          -->
+          <div class="inp">
+            <input id="inp-query" name="wd" size="22" maxlength="60"  autocomplete="off" dir="ltr" value="您还有别的选择么？" />
+          </div>
+          <div class="inp-btn">
+            <input type="submit" value="搜索" />
+          </div>
+          <input type="hidden" name="ie" value="UTF-8" />
+          <input type="hidden" name="oe" value="UTF-8" />
+          <input type="hidden" name="hl" value="zh-CN" />
+          <input type="hidden" name="client" value="tankaixiong.cn" ></fieldset>
+      </form>
+    </div>
+  </div>
+</div>
+<div class="nav-secondary">
+  <ul class="nav-items">
+    <li class="nav-item-first">
+      <a href="#">分类浏览</a>
+    </li>
+    <li class="book-cart">
+      <a href="#">常用</a>
+    </li>
+    <li>
+      <a href="#" target="_blank">.NET导航</a> <sup class="icon-new"></sup>
+    </li>
+  </ul>
+</div>
+</div>
+<script type="text/template" id="suggest-item">
+    <li class="item"><a href="#">{{= item}}</a></li>
+  </script>
+<div id="wrapper">
+<div id="content">
+
+  <h2 style="color:#3BA354;">常用</h2>
+  <div class="model">
+    <span>
+      <a href="http://www.java2s.com/">
+        <b>java2s</b>
+      </a>
+      (程序指南,源码例子)
+    </span>
+    <span>
+      <a href="http://grepcode.com/">
+        <b>grepcode</b>
+      </a>
+      (Searching Java code 搜索java源码)
+    </span>
+    <span>
+      <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">
+        <b>JDK</b>
+      </a>
+      ( Java SE Downloads - Oracle)
+    </span>
+    <span>
+      <a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html">
+        <b>Java SE Development Kit 7 Downloads</b>
+      </a>
+    </span>
+    <span>
+      <a href="http://docs.oracle.com/javase/7/docs/webnotes/install/">
+        <b>各操作系统安装帮助指南</b>
+      </a>
+    </span>
+    <span>
+      <a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk-7-netbeans-download-432126.html">
+        <b>JDK 7u25 with NetBeans 7.3.1</b>
+      </a>
+    </span>
+    <span>
+      <a href="http://www.oracle.com/technetwork/java/javase/downloads/jre7-downloads-1880261.html">
+        <b>Java SE Runtime Environment 7 Downloads</b>
+      </a>
+    </span>
+    <span>
+      <a href="http://www.huihoo.com/">
+        <b>灰狐</b>
+      </a>
+      (程序员网站、开发者网络、分享者乐园,一个自由、社区驱动的创新工场,一个公共资源)
+    </span>
+    <span>
+      <a href="http://www.springsource.org/">
+        <b>Spring</b>
+      </a>
+    </span>
+    <span>
+      <a href="http://docs.huihoo.com/spring/">
+        <b>Spring文档</b>
+      </a>
+    </span>
+    <span>
+      <a href="http://download.huihoo.com/spring/">
+        <b>Spring下载</b>
+      </a>
+    </span>
+    <span>
+      <a href="http://wiki.huihoo.com/wiki/Spring_Framework">
+        <b>Spring资料介绍</b>
+      </a>
+    </span>
+
+    <span>
+      <a href="http://www.hibernate.org/">
+        <b>hibernate官网</b>
+      </a>
+    </span>
+    <span>
+      <a href="https://sourceforge.net/projects/hibernate/">
+        <b>hibernate下载</b>
+      </a>
+    </span>
+    <span>
+      <a href="http://docs.jboss.org/hibernate/">
+        <b>hibernate 文档</b>
+      </a>
+    </span>
+
+    <span>
+      <a href="http://ibatis.apache.org/">
+        <b>ibatis</b>
+      </a>
+    </span>
+    <span>
+      <a href="http://code.google.com/p/mybatis/">
+        <b>mybatis</b>
+      </a>
+    </span>
+    <span>
+      <a href="http://struts.apache.org/">
+        <b>struts</b>
+      </a>
+    </span>
+    <span>
+      <a href="http://commons.apache.org/proper/commons-dbutils/">
+        <b>commons-dbutils</b>
+      </a>
+    </span>
+    <span>
+      <a href="http://www.ibm.com/developerworks/cn/java/">
+        <b>IBM Java 开发</b>
+      </a>
+    </span>
+
+    <span>
+      <a href="http://www.jetbrains.com/idea/">
+        <b>IntelliJ IDEA</b>
+      </a>
+    </span>
+    <span>
+      <a href="http://www.eclipse.org/downloads/">
+        <b>eclipse</b>
+      </a>
+    </span>
+    <span>
+      <a href="http://www.myeclipseide.com">
+        <b>myeclipse</b>
+      </a>
+    </span>
+    <span>
+      <a href="http://www.sublimetext.com/">
+        <b>sublimetext</b>
+      </a>
+    </span>
+
+    <span>
+      <a href="http://www.miniui.com/demo/">
+        <b>jQuery MiniUI</b>
+      </a>
+    </span>
+
+    <span>
+      <a href="http://twitter.github.io/bootstrap/">
+        <b>Twitter Bootstrap</b>
+      </a>
+    </span>
+
+    <span>
+      <a href="http://findicons.com/">
+        <b>搜索图片</b>
+      </a>
+    </span>
+    <span>
+      <a href="http://www.open-open.com/">
+        <b>深度开源</b>
+      </a>
+    </span>
+    <span>
+      <a href="http://www.ostools.net/">
+        <b>开源中国</b>
+      </a>
+    </span>
+
+  </div>
+
+</div>
+<div id="footer">
+  <span id="icp" class="fleft gray-link">&copy; 2005－2013 tankaixiong.cn, all rights reserved</span>
+  <span class="fright">
+    <a href="#">关于JAVA导航</a>
+    &middot;
+    <a href="#">联系我们</a>
+    &middot;
+    <a href="#">免责声明</a>
+    &middot;
+    <a href="#">帮助中心</a>
+    &middot;
+    <a href="#">网站合作</a>
+    &middot;
+    <a href="#">广告</a>
+  </span>
+</div>
 </div>
 
 </body>
