--- a/xn/index.htm
+++ b/xn/index.htm
@@ -25,10 +25,10 @@
 
 	<div class="logo">
 		<a href="default-container-index.html">
-			<img src="/system/templates/pinwu/images/logo.png" />
+			<img src="/xn/img/xnlogo.png" />
 		</a>
 	</div>
-	<div class="header">
+	<div class="header" style="height: auto">
 		<div class="fl nav">
 			<ul>
 				<li>
@@ -57,7 +57,7 @@
 	<div class="foot3">
     <div class="fl">
 		西南大学网络与继续教育学院   Copyright
-? 2001-2022 tankaixiong.cn all rights
+? 2001-2022 all rights
       <br/>
       reserved. 
 Design:PER-DESIGN   
