--- a/xn/index.htm
+++ b/xn/index.htm
@@ -28,7 +28,7 @@
 			<img src="/xn/img/xnlogo.png" />
 		</a>
 	</div>
-	<div class="header" style="height: auto">
+	<div class="header" style="height: auto;background-color: #185eba;">
 		<div class="fl nav">
 			<ul>
 				<li>
