--- a/xn/index.htm
+++ b/xn/index.htm
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <!-- saved from url=(0037)http://book.douban.com/tag/?view=type -->
 <html lang="zh-CN" class="ua-windows ua-webkit book-new-nav">
-<head>  
+<head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>关于我一个程序员的思考</title>
-	<meta name="Keywords" content="" />
+	<title>西南大学网络与继续教育学院课程考试</title>
+	<meta name="Keywords" content="西南大学,机考,大作业,答案" />
 	<meta name="Description" content="" />
-	<base >   
+	<base >
 	<link href="/system/templates/pinwu/css/main.css" rel="stylesheet" type="text/css" />
 	<link href="/system/templates/pinwu/css/index.css" rel="stylesheet" type="text/css" />
 	<LINK href="/system/templates/pinwu/images/favicon.ico" type="image/x-icon" rel=icon>
@@ -19,32 +19,46 @@
 	<script src="/system/templates/pinwu/css/script/png.js" type="text/javascript"></script>
 	<script type="text/javascript">DD_belatedPNG.fix('div, ul, img, li, input , a');</script>
 	<![endif]-->
+
+	<style type="text/css">
+		html,body{
+			background-color: #ffffff;
+			padding-left: 0px;
+			width: auto;
+
+			height:100% ;
+			margin:0;
+		}
+		.contact{min-height:100%;height:auto;}
+
+		.content{padding-bottom:80px}
+
+		.foot3{
+			background-color: #185eba;
+			font-family: Verdana, Geneva, sans-serif;
+			font-size: 14px;
+			color: #ffffff;
+			text-align: center;
+			height:50px;
+			margin-top:80px;
+		}
+	</style>
 </head>
 
 <body>
 
 	<div class="logo">
-		<a href="default-container-index.html">
-			<img src="/xn/img/xnlogo.png" />
-		</a>
+
 	</div>
 	<div class="header" style="height: auto;background-color: #185eba;">
-		<div class="fl nav">
-			<ul>
-				<li>
-					<a href="default-container-index.html"  >首页</a>
-				</li>
-
-			</ul>
-		</div>
-		<div class="fr topRight">
-		</div>
+		<a>
+			<img src="/xn/img/logo.png" style="padding-left: 150px;"/>
+		</a>
 	</div>
 
 	<div class="contact">
 
 		<div class="content">
-			test page
 
 
 		</div>
@@ -55,15 +69,15 @@
 		</div>
 	</div>
 	<div class="foot3">
-    <div class="fl">
+
 		西南大学网络与继续教育学院   Copyright
 ? 2001-2022 all rights
       <br/>
-      reserved. 
-Design:PER-DESIGN   
+      reserved.
+Design:PER-DESIGN
     </div>
 
     <span class="clear_f"></span>
-  </div>
+
 </body>
 </html>
