--- a/xn/201912/9047.htm
+++ b/xn/201912/9047.htm
@@ -7,16 +7,16 @@
 	<meta name="Keywords" content="西南大学,机考,大作业,答案" />
 	<meta name="Description" content="" />
 	<base >
-	<link href="../system/templates/pinwu/css/main.css" rel="stylesheet" type="text/css" />
-	<link href="../system/templates/pinwu/css/index.css" rel="stylesheet" type="text/css" />
-	<LINK href="../system/templates/pinwu/images/favicon.ico" type="image/x-icon" rel=icon>
-	<LINK href="../system/templates/pinwu/images/favicon.ico" type="image/x-icon" rel="shortcut icon">
-	<link rel="shortcut icon" type="image/ico" href="../system/templates/pinwu/images/favicon.ico">
-	<script language="javascript" type="text/javascript" src="../system/templates/pinwu/css/script/jquery-1.4.2.min.js"></script>
-	<script language="javascript" type="text/javascript" src="../system/templates/pinwu/css/script/js.js"></script>
-	<script language="javascript" type="text/javascript" src="../system/templates/pinwu/css/script/fun.js"></script>
+	<link href="/system/templates/pinwu/css/main.css" rel="stylesheet" type="text/css" />
+	<link href="/system/templates/pinwu/css/index.css" rel="stylesheet" type="text/css" />
+	<LINK href="/system/templates/pinwu/images/favicon.ico" type="image/x-icon" rel=icon>
+	<LINK href="/system/templates/pinwu/images/favicon.ico" type="image/x-icon" rel="shortcut icon">
+	<link rel="shortcut icon" type="image/ico" href="/system/templates/pinwu/images/favicon.ico">
+	<script language="javascript" type="text/javascript" src="/system/templates/pinwu/css/script/jquery-1.4.2.min.js"></script>
+	<script language="javascript" type="text/javascript" src="/system/templates/pinwu/css/script/js.js"></script>
+	<script language="javascript" type="text/javascript" src="/system/templates/pinwu/css/script/fun.js"></script>
 	<!--[if lte IE 6]>
-	<script src="../system/templates/pinwu/css/script/png.js" type="text/javascript"></script>
+	<script src="/system/templates/pinwu/css/script/png.js" type="text/javascript"></script>
 	<script type="text/javascript">DD_belatedPNG.fix('div, ul, img, li, input , a');</script>
 	<![endif]-->
 
@@ -52,7 +52,7 @@
 	</div>
 	<div class="header" style="height: auto;background-color: #185eba;">
 		<a>
-			<img src="../xn/img/logo.png" style="padding-left: 150px;"/>
+			<img src="/xn/img/logo.png" style="padding-left: 150px;"/>
 		</a>
 	</div>
 
@@ -98,13 +98,13 @@
             </p>
             <p>
                 微信扫一扫：<br/>
-                <img src="../xn/img/qcode.png"/>
+                <img src="/xn/img/qcode.png"/>
             </p>
 
 		</div>
 		<div class="topA3">
 			<a href="javascript:scroll(0,0)">
-				<img src="../system/templates/pinwu/images/topa2.png" />
+				<img src="/system/templates/pinwu/images/topa2.png" />
 			</a>
 		</div>
 	</div>
