--- a/xn/201912/9047.html
+++ b/xn/201912/9047.html
@@ -3,8 +3,8 @@
 <html lang="zh-CN" class="ua-windows ua-webkit book-new-nav">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>西南大学网络与继续教育学院课程考试</title>
-	<meta name="Keywords" content="西南大学,机考,大作业,答案" />
+	<title>西南大学网络与继续教育学院课程考试-人力资源管理【9047】</title>
+	<meta name="Keywords" content="人力资源管理【9047】,西南大学,机考,大作业,答案" />
 	<meta name="Description" content="" />
 	<base >
 	<link href="/system/templates/pinwu/css/main.css" rel="stylesheet" type="text/css" />
