--- a/xn/201912/9047.html
+++ b/xn/201912/9047.html
@@ -92,13 +92,14 @@
             </p>
 
 
-            <h3>查看答案</h3>
-            <p>微信内点击链接访问:<br/>
-            <a href="https://appy3YYVjus2405.h5.xiaoeknow.com">https://appy3YYVjus2405.h5.xiaoeknow.com</a>
-            </p>
+
+            <h3>微信扫一扫查看答案：</h3>
             <p>
-                微信扫一扫：<br/>
                 <img src="/xn/img/qcode.png"/>
+            </p>
+            <h3>微信内点击链接访问:</h3>
+            <p>
+                <a href="https://appy3YYVjus2405.h5.xiaoeknow.com">https://appy3YYVjus2405.h5.xiaoeknow.com</a>
             </p>
 
 		</div>
