--- a/default-container-index.html
+++ b/default-container-index.html
@@ -65,7 +65,7 @@
       </div>
       <div class="w1">
 
-        <a href="http://weibo.com/u/1764042272" target="_blank">
+        <a href="" target="_blank">
           <img src="system/templates/pinwu/images/weibo.png" />
         </a>
       </div>
