--- a/about.htm
+++ b/about.htm
@@ -35,7 +35,7 @@
 					<a href="default-container-index.html"  >首页</a>
 				</li>
 				<li>
-					<a href="http://www.cnblogs.com/tankaixiong/" target="_blank" >我的技术博客</a>
+
 				</li>
 				<li>
 				  <a href="java/java.htm"  >JAVA导航</a>
@@ -68,7 +68,7 @@
 			</div>
 			<div class="w1">
 
-				<a href="http://weibo.com/u/1764042272" target="_blank">
+				<a href="" target="_blank">
 					<img src="system/templates/pinwu/images/weibo.png" />
 				</a>
 			</div>
@@ -137,21 +137,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
 			<p>
 				<br />
 			</p>
-			<p>
-				<span style="font-size:14px;font-family:Microsoft YaHei;">地址:中国上海市松江区</span>
-				<br />
-				<span style="font-size:14px;font-family:Microsoft YaHei;">新浪微博: <a href="http://weibo.com/u/1764042272" target="_blank">小小的天呀大大的梦xiang</a></span> 
-				<br />
-				<span style="font-size:14px;font-family:Microsoft YaHei;">
-					Email:<a href="mailto:tankaixiong@foxmail.com">&nbsp;tankaixiong@foxmail.com</a> &nbsp;&nbsp;
-					<a href="mailto:tankaixiong@aliyun.com">tankaixiong@aliyun.com</a>
-				</span>
-				<br />
-				<span style="font-size:14px;font-family:Microsoft YaHei;">博客园: <a href="http://www.cnblogs.com/tankaixiong/" target="_blank">tankaixiong</a></span> 
-				<br />
-				 
-				 
-			</p>
+
 			<p>
 				<br />
 				<span style="font-size:14px;font-family:Microsoft YaHei;"></span>
