--- a/index - Copy.html
+++ b/index - Copy.html
@@ -31,7 +31,7 @@
           <a href="default-container-index.html"  >首页</a>
         </li>
         <li>
-          <a href="http://www.cnblogs.com/tankaixiong/" target="_blank" >我的技术博客</a>
+
         </li>
         <li>
           <a href="https://github.com/tankaixiong/meme" target="_blank" >游戏服务器架构meme</a>
@@ -67,7 +67,7 @@
       </div>
       <div class="w1">
 
-        <a href="http://weibo.com/u/1764042272" target="_blank">
+        <a href="" target="_blank">
           <img src="system/templates/pinwu/images/weibo.png" />
         </a>
       </div>
