clear user data

--- a/index - Copy.html
+++ b/index - Copy.html
@@ -89,7 +89,7 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
   <div class="divBox">
 
     <div class="liBox1 indexBox1">
-      <a href="http://www.cnblogs.com/tankaixiong/" class="contentDiv1" >
+      <a href="" class="contentDiv1" >
         <h2>
           <span>The programmer blog</span>
           纯粹的技术博客
@@ -105,10 +105,10 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
         </div>
       </a>
       <div class="contentDiv" style="background:#139BEF; filter: Alpha(Opacity=30);display:block;"></div>
-      <a href="http://www.cnblogs.com/tankaixiong/">
+      <a href="">
         <img  src="images/home/home11.jpg" class="img0" />
       </a>
-      <a href="http://www.cnblogs.com/tankaixiong/">
+      <a href="">
         <img src="images/home/home12.jpg" />
       </a>
     </div>
