--- a/java/java.htm
+++ b/java/java.htm
@@ -29,7 +29,7 @@
   <div id="db-global-nav" class="global-nav">
     <div class="bd">
       <div class="top-nav-info">
-        <a href="http://www.cnblogs.com/tankaixiong">给我留言</a>
+        <a href="">给我留言</a>
       </div>
       <div class="global-nav-items">
         <ul>
@@ -43,7 +43,7 @@
             <a href="#">.NET导航</a>
           </li>
           <li>
-            <a href="http://www.cnblogs.com/tankaixiong/" target="_blank">博客</a>
+            <a href="" target="_blank">博客</a>
           </li>
           <li>
             <a href="/about.htm"  target="_blank" >
