clear user data

--- a/index.html
+++ b/index.html
@@ -204,7 +204,12 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
         </div>
       </a>
       <div class="contentDiv" style="background:#aa671f; filter: Alpha(Opacity=30);display:block;"></div>
-
+      <a href="about.htm">
+        <img  src="images/photo/gf.jpg" class="img0" />
+      </a>
+      <a href="about.htm">
+        <img src="images/photo/gf2.jpg" />
+      </a>
     </div>
 
     <div class="liBox2">
