--- a/index.html
+++ b/index.html
@@ -205,10 +205,10 @@ document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static
       </a>
       <div class="contentDiv" style="background:#aa671f; filter: Alpha(Opacity=30);display:block;"></div>
       <a href="about.htm">
-        <img  src="images/photo/gf.jpg" class="img0" />
+        <img  src="images/photo/me1.jpg" class="img0" />
       </a>
       <a href="about.htm">
-        <img src="images/photo/gf2.jpg" />
+        <img src="images/photo/me1.jpg" />
       </a>
     </div>
 
